--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <div class="nav-inner">
           <ul class="nav-list">
-            <li><a href="index.html">Главная</a></li>
+            <li><a href="main.html">Главная</a></li>
             <li><a href="katalog.html">Каталог</a></li>
             <li><a href="item.html">Карточка</a></li>
             <li><a href="card.html">Корзина</a></li>
