--- a/main.html
+++ b/main.html
@@ -128,14 +128,7 @@
                 </ul>
                 <a href="#" class="link-to-news">Все новости</a>
               </div>
-              <div class="banner-phone">
-                <div class="banner-phone-inner">
-                  <div class="banner-left"><p>Возниклки вопросы? Звоните!</p></div>
-                  <div class="banner-right">
-                    <p><span class="b-phone">+7 (843) 56-04-000</span><span class="b-phone-2">+7 (843) 527-55-02</span></p>
-                  </div>
-                </div>  
-              </div>
+
               <div class="sidebar-review">
                 <h3 class="sidebar-title">Отзывы</h3>
                 <ul class="list-review">
@@ -312,6 +305,15 @@
                   </div>
               </div>
             </div>
+
+              <div class="banner-phone">
+                <div class="banner-phone-inner">
+                  <div class="banner-left"><p>Возниклки вопросы? Звоните!</p></div>
+                  <div class="banner-right">
+                    <p><span class="b-phone">+7 (843) 56-04-000</span></p>
+                  </div>
+                </div>  
+              </div>
 
             <div class="default-slider-wrap">
               <h3 class="sl-title">Распродажа товаров</h3>
